--- a/css/main.css
+++ b/css/main.css
@@ -40,11 +40,11 @@ body {
   color: #333;
 }
 
-.btn {
+a {
   padding: .4em .75em;
   border-radius: .4em;
   text-decoration: none;
-  border: none;
+  border: .4em solid #666;
   color: #333;
 }
 
