--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ section {
 
 h2 {
   text-align: center;
-  font-family: "Lato", sans-serif;
+  font-family: Lato, sans-serif;
   font-weight: bold;
   color: #333;
   padding-top: 1em;
@@ -22,7 +22,7 @@ h2 {
 }
 
 div {
-  font-family: "Lato", sans-serif;
+  font-family: Lato, sans-serif;
   text-align: left;
   color: #333;
 }
@@ -36,7 +36,7 @@ img {
 
 body {
   display: inline-block;
-  font-family: "Lato", sans-serif;
+  font-family: Lato, sans-serif;
   color: #333;
 }
 
