--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ html {
   box-sizing: border-box;
   line-height: 1.5;
   background-color: #eee9de;
+  max-width: 25em;
 }
 
 *, *::before, *::after {
@@ -31,7 +32,7 @@ img {
   vertical-align: middle;
   margin-top: 1.5rem;
   max-width: 25em;
-  width: auto;
+  width: 448px;
 }
 
 body {
@@ -40,7 +41,7 @@ body {
   margin: 1.5rem;
 }
 
-a.btn {
+a {
   padding: .4em .75em;
   border-radius: .4em;
   text-decoration: none;
