--- a/css/main.css
+++ b/css/main.css
@@ -32,11 +32,14 @@ img {
   vertical-align: middle;
   margin-top: 1.5rem;
   max-width: 25em;
+  display: inline;
+  width: 20em;
 }
 
 body {
   font-family: Lato, sans-serif;
   color: #333;
+  margin: 1.5rem;
 }
 
 a {
@@ -55,4 +58,8 @@ a:hover {
 p {
   max-width: 25em;
   margin-bottom: 1.5em;
+}
+
+.btn {
+  display: inline-block;
 }
