--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ img {
   vertical-align: middle;
   margin-top: 1.5rem;
   max-width: 25em;
-  display: inline-block;
+  display: block;
   width: 20em;
 }
 
