--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ img {
 body {
   font-family: Lato, sans-serif;
   color: #333;
-  margin: 1rem;
+  margin: .75rem;
   vertical-align: middle;
 }
 
