--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@ html {
 
 section {
   display: inline;
+  vertical-align: middle;
 }
 
 h2 {
@@ -17,7 +18,6 @@ h2 {
   font-family: Lato, sans-serif;
   font-weight: bold;
   color: #000;
-  padding-top: 1em;
   margin-bottom: 1em;
   display: inline-block;
 }
@@ -30,22 +30,21 @@ div {
 }
 
 img {
-  margin-top: 1.5rem;
   max-width: 25em;
   display: inline;
   width: 100%;
+  margin: 1.5rem;
 }
 
 body {
   font-family: Lato, sans-serif;
   color: #000;
-  vertical-align: left;
+  text-align: center;
   margin: .5rem;
 }
 
 a {
   padding: .4em .75em;
-  border-radius: .4em;
   text-decoration: none;
   border: .4em solid #666;
   color: #333;
@@ -63,4 +62,5 @@ p {
 
 .btn {
   display: inline;
+  border-radius: .4em;
 }
