--- a/css/main.css
+++ b/css/main.css
@@ -33,14 +33,15 @@ img {
   max-width: 25em;
   display: block;
   width: 100%;
-  margin: 1.5rem;
+  padding: 1em;
 }
 
 body {
   font-family: Lato, sans-serif;
   color: #000;
   text-align: center;
-  margin: .5rem;
+  margin: 0;
+  padding: 1em;
 }
 
 a {
