--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@ html {
 
 section {
   display: inline;
+  vertical-align: middle;
 }
 
 h2 {
@@ -17,7 +18,6 @@ h2 {
   font-family: Lato, sans-serif;
   font-weight: bold;
   color: #000;
-  margin-bottom: 1em;
   display: inline-block;
 }
 
@@ -26,13 +26,15 @@ div {
   text-align: left;
   color: #000;
   display: inline-block;
+  padding: 1em;
 }
 
 img {
   max-width: 25em;
-  display: inline-block;
+  display: inline;
   width: 100%;
   margin: 1.5rem .25rem;
+  padding: 1em;
 }
 
 body {
