--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ div {
 
 img {
   max-width: 25em;
-  display: inline;
+  display: block;
   width: 100%;
   margin: 1.5rem .25rem;
   padding: 1em;
